--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
       .map {
         width: 100%;
-        height: 400px;
+        height: 600px;
       }
       .ol-popup {
         position: absolute;
@@ -63,32 +63,31 @@
     <section class="hero">
       <div class="hero-body">
         <p class="title">Wildfire Visualization Interface</p>
-        <p class="subtitle">Vinayak Gajjewar, Samriddhi Singla, Dr. Ahmed Eldawy</p>
       </div>
     </section>
 
     <div class="columns ml-4 mr-4">
-      <div class="column">
+      <div class="column is-one-fifth">
         <!--feature info div-->
     <div id="feature-info" class="box">
-      <p>acq_date: <span id="acq_date">4</span></p>
-      <p>acq_time: <span id="acq_time">4</span></p>
-      <p>frp: <span id="frp">4</span></p>
-      <p>TEMP_ave: <span id="TEMP_ave">4</span></p>
-      <p>TEMP_min: <span id="TEMP_min">4</span></p>
-      <p>TEMP_max: <span id="TEMP_max">4</span></p>
-      <p>PRCP: <span id="PRCP">4</span></p>
-      <p>SNOW: <span id="SNOW">4</span></p>
-      <p>WDIR_ave: <span id="WDIR_ave">4</span></p>
-      <p>WSPD_ave: <span id="WSPD_ave">4</span></p>
-      <p>PRES_ave: <span id="PRES_ave">4</span></p>
-      <p>WCOMP: <span id="WCOMP">4</span></p>
-      <p>ELEV_max: <span id="ELEV_max">4</span></p>
-      <p>ELEV_min: <span id="ELEV_min">4</span></p>
-      <p>ELEV_median: <span id="ELEV_median">4</span></p>
-      <p>ELEV_mode: <span id="ELEV_mode">4</span></p>
-      <p>ELEV_sum: <span id="ELEV_sum">4</span></p>
-      <p>ELEV_mean: <span id="ELEV_mean">4</span></p>
+      <p>acq_date: <span id="acq_date" class="has-text-info"></span></p>
+      <p>acq_time: <span id="acq_time" class="has-text-info"></span></p>
+      <p>frp: <span id="frp" class="has-text-info"></span></p>
+      <p>TEMP_ave: <span id="TEMP_ave" class="has-text-info"></span></p>
+      <p>TEMP_min: <span id="TEMP_min" class="has-text-info"></span></p>
+      <p>TEMP_max: <span id="TEMP_max" class="has-text-info"></span></p>
+      <p>PRCP: <span id="PRCP" class="has-text-info"></span></p>
+      <p>SNOW: <span id="SNOW" class="has-text-info"></span></p>
+      <p>WDIR_ave: <span id="WDIR_ave" class="has-text-info"></span></p>
+      <p>WSPD_ave: <span id="WSPD_ave" class="has-text-info"></span></p>
+      <p>PRES_ave: <span id="PRES_ave" class="has-text-info"></span></p>
+      <p>WCOMP: <span id="WCOMP" class="has-text-info"></span></p>
+      <p>ELEV_max: <span id="ELEV_max" class="has-text-info"></span></p>
+      <p>ELEV_min: <span id="ELEV_min" class="has-text-info"></span></p>
+      <p>ELEV_median: <span id="ELEV_median" class="has-text-info"></span></p>
+      <p>ELEV_mode: <span id="ELEV_mode" class="has-text-info"></span></p>
+      <p>ELEV_sum: <span id="ELEV_sum" class="has-text-info"></span></p>
+      <p>ELEV_mean: <span id="ELEV_mean" class="has-text-info"></span></p>
     </div>
       </div>
       <div class="column">
