--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Wildfire Visualization</title>
+    <title>Wildfire Data Explorer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.6.1/css/ol.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.6.1/build/ol.js"></script>
 
@@ -62,7 +62,7 @@
     <!--header-->
     <section class="hero">
       <div class="hero-body">
-        <p class="title">Wildfire Visualization Interface</p>
+        <p class="title">Wildfire Data Explorer</p>
       </div>
     </section>
 
