--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <style>
       .map {
         width: 100%;
-        height: 600px;
+        height: 100vh;
+        padding: 0px;
       }
       .ol-popup {
         position: absolute;
@@ -59,17 +60,21 @@
   </head>
   <body>
 
-    <!--header-->
-    <section class="hero">
-      <div class="hero-body">
-        <p class="title">Wildfire Data Explorer</p>
-      </div>
-    </section>
 
-    <div class="columns ml-4 mr-4">
+
+    <div class="columns is-gapless">
       <div class="column is-one-fifth">
+
+        <!--header-->
+        <section class="hero">
+          <div class="hero-body">
+            <p class="title">Wildfire Data Explorer</p>
+          </div>
+        </section>
+
+
         <!--feature info div-->
-    <div id="feature-info" class="box">
+        <div id="feature-info" class="ml-6">
       <p>acq_date: <span id="acq_date" class="has-text-info"></span></p>
       <p>acq_time: <span id="acq_time" class="has-text-info"></span></p>
       <p>frp: <span id="frp" class="has-text-info"></span></p>
@@ -92,7 +97,7 @@
       </div>
       <div class="column">
         <!--map-->
-        <div id="map" class="map box"></div>
+        <div id="map" class="map"></div>
         <!--popup-->
         <div id="popup" class="ol-popup">
           <a href="#" id="popup-closer" class="ol-popup-closer"></a>
