modify info div to work with CA_farmland data
modify feature property names in index.html and index.js

--- a/index.html
+++ b/index.html
@@ -84,25 +84,11 @@
 
         <!--feature info div-->
         <div id="feature-info" class="ml-6">
-      <p>acq_date: <span id="acq_date" class="has-text-info"></span></p>
-      <p>acq_time: <span id="acq_time" class="has-text-info"></span></p>
-      <p>frp: <span id="frp" class="has-text-info"></span></p>
-      <p>TEMP_ave: <span id="TEMP_ave" class="has-text-info"></span></p>
-      <p>TEMP_min: <span id="TEMP_min" class="has-text-info"></span></p>
-      <p>TEMP_max: <span id="TEMP_max" class="has-text-info"></span></p>
-      <p>PRCP: <span id="PRCP" class="has-text-info"></span></p>
-      <p>SNOW: <span id="SNOW" class="has-text-info"></span></p>
-      <p>WDIR_ave: <span id="WDIR_ave" class="has-text-info"></span></p>
-      <p>WSPD_ave: <span id="WSPD_ave" class="has-text-info"></span></p>
-      <p>PRES_ave: <span id="PRES_ave" class="has-text-info"></span></p>
-      <p>WCOMP: <span id="WCOMP" class="has-text-info"></span></p>
-      <p>ELEV_max: <span id="ELEV_max" class="has-text-info"></span></p>
-      <p>ELEV_min: <span id="ELEV_min" class="has-text-info"></span></p>
-      <p>ELEV_median: <span id="ELEV_median" class="has-text-info"></span></p>
-      <p>ELEV_mode: <span id="ELEV_mode" class="has-text-info"></span></p>
-      <p>ELEV_sum: <span id="ELEV_sum" class="has-text-info"></span></p>
-      <p>ELEV_mean: <span id="ELEV_mean" class="has-text-info"></span></p>
-    </div>
+          <p>Acres: <span id="acres" class="has-text-info"></span></p>
+          <p>County: <span id="county" class="has-text-info"></span></p>
+          <p>Crop (2014): <span id="crop2014" class="has-text-info"></span></p>
+          <p>Date: <span id="date" class="has-text-info"></span></p>
+        </div>
       </div>
       <div class="column">
         <!--map-->
