add depth and agg func dropdowns
add dropdown elements to control displayed soil depth and specify aggregation function. functionality not implemented yet.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,35 @@
           </div>
         </section>
 
+        <!--depth select-->
+        <div class="field">
+          <label class="label ml-6">Soil depth</label>
+          <div class="control">
+            <div class="select ml-6">
+              <select>
+                <option>0-5 cm.</option>
+                <option>5-10 cm.</option>
+                <option>15-20 cm.</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <!--aggregation select-->
+        <div class="field">
+          <label class="label ml-6">Aggregation</label>
+          <div class="control">
+            <div class="select ml-6">
+              <select>
+                <option>Minimum</option>
+                <option>Maximum</option>
+                <option>Standard Deviation</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <hr>
 
         <!--feature info div-->
         <div id="feature-info" class="ml-6">
