change <p> tags to labels

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
         <!--feature info div-->
         <div id="feature-info" class="ml-6">
-          <p>Acres: <span id="acres" class="has-text-info"></span></p>
-          <p>County: <span id="county" class="has-text-info"></span></p>
-          <p>Crop (2014): <span id="crop2014" class="has-text-info"></span></p>
-          <p>Date: <span id="date" class="has-text-info"></span></p>
+          <label class="label">Acres: <span id="acres" class="has-text-info"></span></label>
+          <label class="label">County: <span id="county" class="has-text-info"></span></label>
+          <label class="label">Crop (2014): <span id="crop2014" class="has-text-info"></span></label>
+          <label class="label">Date: <span id="date" class="has-text-info"></span></label>
         </div>
       </div>
       <div class="column">
