change title from hero to h1

--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
     <div class="columns is-gapless">
       <div class="column is-one-fifth">
 
-        <!--header-->
-        <section class="hero">
-          <div class="hero-body">
-            <p class="title">Wildfire Data Explorer</p>
-          </div>
-        </section>
+        <!--title-->
+        <h1 class="title">Wildfire Data Explorer</h1>
+
+        <hr>
 
         <!--depth select-->
         <div class="field">
