add option to select layer
add dropdown menu to select which raster layer to aggregate

--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
                 <option>0-5 cm.</option>
                 <option>5-10 cm.</option>
                 <option>15-20 cm.</option>
+        <!--layer select-->
+        <div class="field">
+          <label class="label">Layer</label>
+          <div class="control">
+            <div class="select">
+              <select>
+                <option>lambda</option>
+                <option>n</option>
+                <option>ph</option>
+                <option>theta_r</option>
+                <option>theta_s</option>
               </select>
             </div>
           </div>
