change labels for soil depth select

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 
         <!--depth select-->
         <div class="field">
-          <label class="label ml-6">Soil depth</label>
+          <label class="label">Soil depth (cm.)</label>
           <div class="control">
             <div class="select ml-6">
               <select>
-                <option>0-5 cm.</option>
-                <option>5-10 cm.</option>
-                <option>15-20 cm.</option>
+                <option>0-5</option>
+                <option>5-10</option>
+                <option>15-20</option>
         <!--layer select-->
         <div class="field">
           <label class="label">Layer</label>
