comment out farmland ui elements

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <h1 class="title">Wildfire Data Explorer</h1>
 
         <hr>
-
-        <!--depth select-->
+        <!--
+        <!--depth select->
         <div class="field">
           <label class="label">Soil depth (cm.)</label>
           <div class="control">
@@ -85,7 +85,7 @@
           </div>
         </div>
 
-        <!--layer select-->
+        <!--layer select->
         <div class="field">
           <label class="label">Layer</label>
           <div class="control">
@@ -101,7 +101,7 @@
           </div>
         </div>
 
-        <!--aggregation select-->
+        <!--aggregation select->
         <div class="field">
           <label class="label">Aggregation</label>
           <div class="control">
@@ -116,6 +116,7 @@
         </div>
 
         <hr>
+        -->
 
         <!--feature info div-->
         <div id="feature-info">
