modify frontend to display relevant wildfire features

--- a/index.html
+++ b/index.html
@@ -120,10 +120,13 @@
 
         <!--feature info div-->
         <div id="feature-info">
-          <label class="label">Acres: <span id="acres" class="has-text-info"></span></label>
-          <label class="label">County: <span id="county" class="has-text-info"></span></label>
-          <label class="label">Crop (2014): <span id="crop2014" class="has-text-info"></span></label>
-          <label class="label">Date: <span id="date" class="has-text-info"></span></label>
+          <label class="label">acq_date: <span id="acq_date" class="has-text-info"></span></label>
+          <label class="label">acq_time: <span id="acq_time" class="has-text-info"></span></label>
+          <label class="label">frp: <span id="frp" class="has-text-info"></span></label>
+          <label class="label">TEMP_ave: <span id="TEMP_ave" class="has-text-info"></span></label>
+          <label class="label">TEMP_min: <span id="TEMP_min" class="has-text-info"></span></label>
+          <label class="label">TEMP_max: <span id="TEMP_max" class="has-text-info"></span></label>
+          <label class="label">WSPD_ave: <span id="WSPD_ave" class="has-text-info"></span></label>
         </div>
       </div>
       <div class="column">
